--- a/profile/style.css
+++ b/profile/style.css
@@ -45,7 +45,7 @@ header .header-left {
   gap: 20px;
 }
 header .header-left .logo {
-  font-size: 48px;
+  font-size: 42px;
   font-family: "Rajdhani";
   font-weight: bold;
   letter-spacing: 1.5px;
@@ -83,10 +83,10 @@ header .header-left .weather div {
   text-align: center;
 }
 header .header-left .weather div .temp {
-  font-size: 24px;
+  font-size: 22px;
 }
 header .header-left .weather div span:last-child {
-  font-size: 16px;
+  font-size: 14px;
 }
 header .gnb {
   display: flex;
@@ -97,14 +97,14 @@ header .gnb {
   align-items: center;
 }
 header .gnb li {
-  font-size: 28px;
+  font-size: 24px;
   font-family: "Rajdhani";
   font-weight: 500;
   cursor: pointer;
   transition: all 0.3s;
 }
 header .gnb li:hover {
-  font-size: 42px;
+  font-size: 38px;
   font-weight: 600;
   -webkit-text-stroke: 1px #222;
   text-shadow: 5px 5px 0px #43c2cd, 10px 10px 0px #e75cd0, 15px 15px 0px #5f4997;
@@ -309,14 +309,12 @@ header .toggle-btn {
 .home .container {
   width: 100%;
   flex-direction: row;
-  justify-content: space-between;
-  align-items: flex-start;
+  justify-content: center;
+  align-items: center;
   padding: 0;
-  padding-top: 60px;
-  gap: 50px;
 }
 .home .container .title {
-  padding-top: 20px;
+  width: 44vw;
   gap: 20px;
   display: flex;
   flex-direction: column;
@@ -339,9 +337,10 @@ header .toggle-btn {
 .home .container .title p {
   width: 65%;
   line-height: 2rem;
+  font-family: "GmarketSansMedium";
   font-size: 20px;
   font-weight: 500;
-  letter-spacing: 1px;
+  letter-spacing: -1px;
 }
 .home .container .title p .point {
   font-weight: 600;
@@ -360,6 +359,8 @@ header .toggle-btn {
   gap: 10px;
   width: 16vw;
   height: 12vw;
+  min-width: 260px;
+  min-height: 180px;
   position: relative;
   perspective: 400px;
 }
@@ -425,10 +426,65 @@ header .toggle-btn {
 .home .container .title .section-inner li .ver {
   transform: rotateX(180deg);
 }
-.home .container .img {
-  background: url("./img/yiseul01.jpg") center/cover no-repeat;
-  width: 50vw;
-  height: 40vw;
+.home .container .profile {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 32vw;
+  min-width: 500px;
+  height: 90%;
+  padding: 18px;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  background: #fff;
+  overflow: hidden;
+  position: relative;
+}
+.home .container .profile .mian-profile {
+  width: 90%;
+  height: 90%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 0;
+}
+.home .container .profile .images {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  transition: all 0.3s;
+}
+.home .container .profile .images .image {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 32vmin;
+  height: auto;
+}
+.home .container .profile .images .image[data-status=inactive] {
+  display: none;
+}
+.home .container .profile .images .image[data-status=active] {
+  display: block;
+}
+.home .container .profile span {
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  transform: translateX(-50%);
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 14px;
+  height: 5%;
 }
 
 .skill .section-tit {
@@ -971,4 +1027,20 @@ header .toggle-btn {
   text-align: center;
   font-size: 14px;
   padding-top: 50px;
+}
+
+@media (max-width: 1440px) {
+  header {
+    padding: 0 20px;
+  }
+  .home {
+    max-width: 100%;
+  }
+  .home .container .title p {
+    width: 84%;
+    font-size: 18px;
+  }
+  .home .container .title .section-inner li {
+    font-size: 14px;
+  }
 }/*# sourceMappingURL=style.css.map */
