--- a/profile/style.scss
+++ b/profile/style.scss
@@ -23,7 +23,7 @@ header {
     align-items: center;
     gap: 20px;
     .logo {
-      font-size: 48px;
+      font-size: 42px;
       font-family: map-get($font-family, main_en);
       font-weight: bold;
       letter-spacing: 1.5px;
@@ -68,10 +68,10 @@ header {
         flex-direction: column;
         text-align: center;
         .temp {
-          font-size: 24px;
+          font-size: 22px;
         }
         span:last-child {
-          font-size: 16px;
+          font-size: 14px;
         }
       }
     }
@@ -84,13 +84,13 @@ header {
     padding: 0 20px;
     align-items: center;
     li {
-      font-size: 28px;
+      font-size: 24px;
       font-family: map-get($font-family, main_en);
       font-weight: 500;
       cursor: pointer;
       transition: all 0.3s;
       &:hover {
-        font-size: 42px;
+        font-size: 38px;
         font-weight: 600;
         -webkit-text-stroke: 1px #222;
         text-shadow: 5px 5px 0px #43c2cd, 10px 10px 0px #e75cd0,
@@ -291,14 +291,12 @@ header {
   .container {
     width: 100%;
     flex-direction: row;
-    justify-content: space-between;
-    align-items: flex-start;
+    justify-content: center;
+    align-items: center;
     padding: 0;
-    padding-top: 60px;
-    gap: 50px;
 
     .title {
-      padding-top: 20px;
+      width: 44vw;
       gap: 20px;
       display: flex;
       flex-direction: column;
@@ -321,9 +319,10 @@ header {
       p {
         width: 65%;
         line-height: 2rem;
+        font-family: map-get($font-family, sub_kr);
         font-size: 20px;
         font-weight: 500;
-        letter-spacing: 1px;
+        letter-spacing: -1px;
         .point {
           font-weight: 600;
           letter-spacing: 1px;
@@ -341,6 +340,8 @@ header {
           gap: 10px;
           width: 16vw;
           height: 12vw;
+          min-width: 260px;
+          min-height: 180px;
           position: relative;
           perspective: 400px;
           .card-horizontal,
@@ -411,10 +412,64 @@ header {
         }
       }
     }
-    .img {
-      background: url("./img/yiseul01.jpg") center/cover no-repeat;
-      width: 50vw;
-      height: 40vw;
+    .profile {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      width: 32vw;
+      min-width: 500px;
+      height: 90%;
+      padding: 18px;
+      box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+      border-radius: 8px;
+      background: #fff;
+      overflow: hidden;
+      position: relative;
+      .mian-profile {
+        width: 90%;
+        height: 90%;
+        object-fit: cover;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        z-index: 0;
+      }
+      .images {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        left: 0;
+        top: 0;
+        transition: all 0.3s;
+        .image {
+          position: absolute;
+          left: 50%;
+          top: 50%;
+          transform: translate(-50%, -50%);
+          width: 32vmin;
+          height: auto;
+        }
+        .image[data-status="inactive"] {
+          display: none;
+        }
+        .image[data-status="active"] {
+          display: block;
+        }
+      }
+      span {
+        position: absolute;
+        left: 50%;
+        bottom: 0;
+        transform: translateX(-50%);
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 14px;
+        height: 5%;
+      }
     }
   }
 }
@@ -976,6 +1031,30 @@ header {
       text-align: center;
       font-size: 14px;
       padding-top: 50px;
+    }
+  }
+}
+
+@media (max-width: 1440px) {
+  //common
+  header {
+    padding: 0 20px;
+  }
+  //home
+  .home {
+    max-width: 100%;
+    .container {
+      .title {
+        p {
+          width: 84%;
+          font-size: 18px;
+        }
+        .section-inner {
+          li {
+            font-size: 14px;
+          }
+        }
+      }
     }
   }
 }
