--- a/profile/style.scss
+++ b/profile/style.scss
@@ -1,6 +1,10 @@
 @import "reset";
 @import "variable";
+html {
+  font-size: 62.5%;
+}
 body {
+  font-size: 1.6rem;
   background: map-get($font-color, bg);
 }
 // header
@@ -9,12 +13,11 @@ header {
   left: 0;
   top: 0;
   width: 100%;
-  height: 100px;
+  height: 5.2vw;
   background: map-get($font-color, primary);
   display: flex;
   justify-content: space-between;
   align-items: center;
-  font-size: 24px;
   color: #fff;
   padding: 0 100px;
   z-index: 999;
@@ -23,10 +26,10 @@ header {
     align-items: center;
     gap: 20px;
     .logo {
-      font-size: 42px;
+      font-size: 4.6rem;
       font-family: map-get($font-family, main_en);
       font-weight: bold;
-      letter-spacing: 1.5px;
+      letter-spacing: 0.15rem;
       color: #fff;
       transition: all 0.3s;
       &:hover {
@@ -43,54 +46,54 @@ header {
         -webkit-text-stroke: 1px #222;
         background-clip: text;
         color: transparent;
-        background-size: 20px 20px;
+        background-size: 2rem 2rem;
         background-position: 0 0;
         animation: colors 1s linear infinite;
       }
     }
     @keyframes colors {
       100% {
-        background-position: 20px 0, 20px 0, 20px 0;
+        background-position: 2rem 0, 2rem 0, 2rem 0;
       }
     }
 
     .weather {
       display: flex;
       align-items: center;
-      height: 80%;
-      gap: 15px;
-      padding: 20px;
+      height: auto;
+      gap: 1.5rem;
+      padding: 2rem;
       img {
-        width: 60px;
+        width: 4vw;
       }
       div {
         display: flex;
         flex-direction: column;
         text-align: center;
         .temp {
-          font-size: 22px;
+          font-size: 2rem;
         }
         span:last-child {
-          font-size: 14px;
+          font-size: 1.2rem;
         }
       }
     }
   }
   .gnb {
     display: flex;
-    gap: 50px;
+    gap: 5rem;
     overflow: hidden;
-    height: 80px;
-    padding: 0 20px;
+    height: auto;
+    padding: 0 2rem;
     align-items: center;
     li {
-      font-size: 24px;
+      font-size: 2.6rem;
       font-family: map-get($font-family, main_en);
       font-weight: 500;
       cursor: pointer;
       transition: all 0.3s;
       &:hover {
-        font-size: 38px;
+        font-size: 3.8rem;
         font-weight: 600;
         -webkit-text-stroke: 1px #222;
         text-shadow: 5px 5px 0px #43c2cd, 10px 10px 0px #e75cd0,
@@ -112,8 +115,8 @@ header {
 }
 .color-select-box {
   position: fixed;
-  left: -154px;
-  bottom: 120px;
+  left: -8vw;
+  bottom: 4.2vw;
   z-index: 999;
   display: flex;
   transition: all 0.3s;
@@ -121,16 +124,16 @@ header {
     left: 0;
   }
   .colorBox {
-    width: 154px;
-    height: 150px;
-    padding: 20px;
+    width: 8vw;
+    height: 8vw;
+    padding: 1vw;
     background: #fff;
     display: flex;
     flex-wrap: wrap;
-    gap: 12px;
+    gap: 1vw;
     .select-color {
-      width: 50px;
-      height: 50px;
+      width: 2.4vw;
+      height: 2.4vw;
       cursor: pointer;
       &:nth-child(1) {
         background: map-get($font-color, primary);
@@ -151,17 +154,19 @@ header {
   position: fixed;
   bottom: 20px;
   right: 20px;
-  width: 50px;
-  height: 50px;
+  width: 2.6vw;
+  height: 2.6vw;
+  min-width: 36px;
+  min-height: 36px;
   border-radius: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   background: map-get($font-color, primary);
-  box-shadow: inset 5px -5px 15px rgba(0, 0, 0, 0.2);
+  box-shadow: inset 5px -5px 1.5rem rgba(0, 0, 0, 0.2);
   opacity: 0.9;
   color: #fff;
-  font-size: 24px;
+  font-size: 1.6vw;
   cursor: pointer;
   z-index: 9999;
 }
@@ -169,15 +174,15 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 50px;
-  height: 50px;
+  width: 2.6vw;
+  height: 2.6vw;
   background: map-get($font-color, primary);
   border-top-right-radius: 100%;
   border-bottom-right-radius: 100%;
   text-align: center;
   cursor: pointer;
   i {
-    font-size: 24px;
+    font-size: 1.2vw;
     color: #fff;
     animation: spin 2s linear infinite;
   }
@@ -197,29 +202,30 @@ header {
   justify-content: flex-start;
   width: 100%;
   height: auto;
-  margin: 100px auto 0;
+  margin: 5.2vw auto 0;
 }
 .container {
   width: 100%;
   height: auto;
-  min-height: 800px;
+  min-height: 42vw;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  padding-top: 80px;
+  padding-top: 4.2vw;
 }
 .section {
   width: 100%;
   height: auto;
   display: flex;
+  justify-content: center;
 }
 .section-tit {
-  font-size: 48px;
+  font-size: 2.5vw;
   font-family: map-get($font-family, main_en);
   font-weight: 600;
-  width: 180px;
-  height: 78px;
+  width: 9.4vw;
+  height: 4vw;
   text-align: center;
   position: relative;
   .underbar {
@@ -227,7 +233,7 @@ header {
     left: 0;
     bottom: 0;
     width: 100%;
-    height: 4px;
+    height: 0.2vw;
     background: map-get($font-color, primary);
   }
   .inner {
@@ -236,15 +242,15 @@ header {
     transform: translateX(-50%);
     bottom: -2px;
     width: 50%;
-    height: 8px;
+    height: 0.4vw;
     background: map-get($font-color, primary);
   }
 }
 .section-inner {
   width: 100%;
   height: 100%;
-  margin-top: 60px;
-  padding: 100px;
+  margin-top: 3.1vw;
+  padding: 5.2vw;
   ul {
     width: 100%;
     height: 100%;
@@ -252,32 +258,32 @@ header {
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    gap: 16px;
+    gap: 0.84vw;
     li {
       display: flex;
       flex-direction: column;
       align-items: center;
-      padding: 30px 10px;
-      gap: 36px;
+      padding: 1.5vw 0.52vw;
+      gap: 1.8vw;
       cursor: pointer;
       .dew {
         display: flex;
         justify-content: center;
         align-items: center;
-        width: 100px;
-        height: 100px;
+        width: 4.8vw;
+        height: 4.8vw;
         background: map-get($font-color, primary);
         border-radius: 100%;
         border-top-left-radius: 0;
         img {
-          width: 42px;
+          width: 2vw;
         }
       }
       .desc {
-        width: 280px;
+        width: 14vw;
         text-align: center;
         h3 {
-          margin-bottom: 8px;
+          margin-bottom: 0.4vw;
         }
       }
     }
@@ -285,8 +291,8 @@ header {
 }
 // home
 .home {
-  max-width: 75%;
-  margin-bottom: 20px;
+  padding: 1vw 0;
+  margin-bottom: 1vw;
 
   .container {
     width: 100%;
@@ -296,8 +302,8 @@ header {
     padding: 0;
 
     .title {
-      width: 44vw;
-      gap: 20px;
+      width: 42vw;
+      gap: 1vw;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -305,7 +311,7 @@ header {
       .hiseul {
         text-align: center;
         span {
-          font-size: 64px;
+          font-size: 3.2vw;
           font-family: map-get($font-family, main_en);
           font-weight: 900;
           -webkit-text-stroke: 1px #222;
@@ -320,28 +326,29 @@ header {
         width: 65%;
         line-height: 2rem;
         font-family: map-get($font-family, sub_kr);
-        font-size: 20px;
+        font-size: 1vw;
         font-weight: 500;
         letter-spacing: -1px;
+        line-height: 2.4rem;
         .point {
           font-weight: 600;
           letter-spacing: 1px;
-          font-size: 24px;
+          font-size: 1.2vw;
           color: map-get($font-color, primary);
         }
       }
       .section-inner {
         margin: 0;
-        margin-top: 20px;
+        margin-top: 1vw;
         padding: 0;
         li {
           border-radius: 5px;
-          padding: 20px 0;
-          gap: 10px;
-          width: 16vw;
-          height: 12vw;
-          min-width: 260px;
-          min-height: 180px;
+          padding: 1vw 0;
+          gap: 0.5vw;
+          width: 0.8vw;
+          height: 0.6vw;
+          min-width: 16vw;
+          min-height: 14vw;
           position: relative;
           perspective: 400px;
           .card-horizontal,
@@ -361,7 +368,7 @@ header {
               flex-direction: column;
               justify-content: center;
               align-items: center;
-              gap: 12px;
+              gap: 0.6vw;
               width: 100%;
               height: 100%;
               border-radius: 8px;
@@ -376,8 +383,8 @@ header {
               color: #fff;
 
               p {
-                font-size: 16px;
-                line-height: 24px;
+                font-size: 1.6rem;
+                line-height: 1.2vw;
               }
             }
           }
@@ -418,9 +425,9 @@ header {
       justify-content: center;
       align-items: center;
       width: 32vw;
-      min-width: 500px;
-      height: 90%;
-      padding: 18px;
+      min-width: 26vw;
+      height: 42vw;
+      padding: 0.9vw;
       box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
       border-radius: 8px;
       background: #fff;
@@ -443,13 +450,32 @@ header {
         left: 0;
         top: 0;
         transition: all 0.3s;
+        overflow: hidden;
+        &::before {
+          content: attr(data-iam);
+          font-family: map-get($font-family, main_en);
+          position: absolute;
+          left: 50%;
+          top: 50%;
+          transform: translate(-40%, -54%) rotateZ(-28deg);
+          color: #fff;
+          font-size: 18vw;
+          font-weight: 500;
+          opacity: 0;
+          transition: all 0.3s;
+        }
+        &:hover::before {
+          opacity: 1;
+        }
         .image {
           position: absolute;
           left: 50%;
           top: 50%;
           transform: translate(-50%, -50%);
-          width: 32vmin;
-          height: auto;
+          width: 16vw;
+          height: 16vw;
+          border-radius: 100%;
+          object-fit: cover;
         }
         .image[data-status="inactive"] {
           display: none;
@@ -1038,20 +1064,19 @@ header {
 @media (max-width: 1440px) {
   //common
   header {
-    padding: 0 20px;
+    padding: 0 1.4vw;
   }
   //home
   .home {
-    max-width: 100%;
+    // max-width: 100%;
     .container {
       .title {
         p {
-          width: 84%;
-          font-size: 18px;
+          font-size: 1.8rem;
         }
         .section-inner {
           li {
-            font-size: 14px;
+            font-size: 1.4rem;
           }
         }
       }
